Replace logo text with SVG image for improved branding; update styles for consistency.

--- a/index.html
+++ b/index.html
@@ -49,16 +49,8 @@
         }
 
         .logo {
-            font-size: 1.8rem;
-            font-weight: 700;
-            letter-spacing: -0.02em;
-            color: #fff;
-        }
-
-        .logo-pro {
-            font-size: 0.7rem;
-            vertical-align: super;
-            font-weight: 400;
+            height: 40px;
+            width: auto;
         }
 
         .nav-links {
@@ -492,9 +484,8 @@
     <div class="stars" id="stars"></div>
 
     <nav>
-        <div class="logo">
-            dive<span class="logo-pro">PRO+</span>
-        </div>
+        <!-- Logo image: Group 3875.svg -->
+        <img src="Group 3875.svg" alt="divePRO+ Logo" class="logo">
         <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="#application">Application</a></li>
