Add loading spinner with progress animation to enhance user experience during content loading

--- a/index.html
+++ b/index.html
@@ -729,6 +729,91 @@
             color: #0a1628;
         }
 
+        /* Loading Spinner */
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #000;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 10000;
+            transition: opacity 0.5s ease-out;
+        }
+
+        .loading-overlay.fade-out {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .loading-container {
+            position: relative;
+            width: 280px;
+            height: 280px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .loading-circle {
+            position: absolute;
+            width: 280px;
+            height: 280px;
+            border: 4px solid rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            border-top: 4px solid #ffffff;
+            animation: spin 2s linear infinite;
+        }
+
+        .loading-logo {
+            width: 100px;
+            height: 100px;
+            z-index: 2;
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        .loading-percentage {
+            position: relative;
+            color: #ffffff;
+            font-size: 2.5rem;
+            font-weight: 700;
+            letter-spacing: 0.1em;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            z-index: 2;
+        }
+
+        .loading-text {
+            margin-top: 2rem;
+            color: #ffffff;
+            font-size: 1.1rem;
+            letter-spacing: 0.15em;
+            text-transform: uppercase;
+            font-weight: 600;
+            text-align: center;
+            line-height: 1.4;
+        }
+
+        .loading-subtitle {
+            margin-top: 0.3rem;
+            color: rgba(255, 255, 255, 0.7);
+            font-size: 0.9rem;
+            letter-spacing: 0.05em;
+            text-transform: none;
+            font-weight: 300;
+            text-align: center;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
         /* Starfield */
         .stars {
             position: fixed;
@@ -808,6 +893,19 @@
     </style>
 </head>
 <body>
+    <!-- Loading Spinner -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-container">
+            <div class="loading-circle"></div>
+            <img src="Group 3875.svg" alt="divePRO+ Logo" class="loading-logo">
+            <div class="loading-percentage" id="loadingPercentage">0%</div>
+        </div>
+        <div class="loading-text">
+            Loading divePRO+
+            <div class="loading-subtitle">Next-Gen Dive Computer</div>
+        </div>
+    </div>
+
     <canvas id="canvas3d"></canvas>
     <div class="stars" id="stars"></div>
 
@@ -1006,6 +1104,32 @@
     </footer>
 
     <script>
+        // Loading Spinner
+        let loadingProgress = 0;
+        const loadingOverlay = document.getElementById('loadingOverlay');
+        const loadingPercentage = document.getElementById('loadingPercentage');
+
+        function updateLoadingProgress() {
+            loadingProgress += Math.random() * 15;
+            if (loadingProgress > 100) loadingProgress = 100;
+            
+            loadingPercentage.textContent = Math.floor(loadingProgress) + '%';
+            
+            if (loadingProgress < 100) {
+                setTimeout(updateLoadingProgress, 100 + Math.random() * 200);
+            } else {
+                setTimeout(() => {
+                    loadingOverlay.classList.add('fade-out');
+                    setTimeout(() => {
+                        loadingOverlay.style.display = 'none';
+                    }, 500);
+                }, 500);
+            }
+        }
+
+        // Start loading animation
+        updateLoadingProgress();
+
         // Create starfield
         const starsContainer = document.getElementById('stars');
         for (let i = 0; i < 100; i++) {
