--- a/index.html
+++ b/index.html
@@ -409,6 +409,116 @@
             min-height: 900px;
         }
 
+        /* Stories Section */
+        .stories-section {
+            background: linear-gradient(135deg, rgba(5, 15, 30, 0.95) 0%, rgba(10, 25, 45, 0.95) 100%);
+            padding: 6rem 5%;
+            position: relative;
+            z-index: 20;
+        }
+
+        .stories-container {
+            max-width: 1600px;
+            margin: 0 auto;
+        }
+
+        .stories-header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .stories-title {
+            font-size: clamp(1.8rem, 3vw, 2.8rem);
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            margin-bottom: 1rem;
+            line-height: 1.3;
+        }
+
+        .stories-subtitle {
+            font-size: clamp(0.85rem, 1.4vw, 1rem);
+            color: rgba(255, 255, 255, 0.85);
+            font-weight: 400;
+            letter-spacing: 0.02em;
+            line-height: 1.5;
+            max-width: 700px;
+            margin: 0 auto;
+        }
+
+        .stories-grid {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 1.2rem;
+        }
+
+        .story-card {
+            position: relative;
+            border-radius: 4px;
+            overflow: hidden;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            aspect-ratio: 3/4;
+        }
+
+        .story-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+        }
+
+        .story-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .story-card:hover .story-image {
+            transform: scale(1.05);
+        }
+
+        .story-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.3s ease;
+        }
+
+        .story-card:hover .story-overlay {
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%);
+        }
+
+        .play-button {
+            width: 80px;
+            height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* background: rgba(255, 255, 255, 0.9); */
+            border-radius: 50%;
+            transition: all 0.3s ease;
+            /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); */
+        }
+
+        .story-card:hover .play-button {
+            /* background: rgba(255, 255, 255, 1); */
+            /* transform: scale(1.1);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4); */
+        }
+
+        .play-button img {
+            width: 30px;
+            height: 30px;
+            object-fit: contain;
+            margin-left: 4px;
+        }
+
         .phone-mockup {
             width: 280px;
             height: 570px;
@@ -925,6 +1035,33 @@
             .cta-text-overlay {
                 gap: 1rem;
             }
+
+            .stories-section {
+                padding: 4rem 5%;
+            }
+
+            .stories-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
+            }
+
+            .stories-title {
+                font-size: 1.5rem;
+            }
+
+            .stories-subtitle {
+                font-size: 0.9rem;
+            }
+
+            .play-button {
+                width: 60px;
+                height: 60px;
+            }
+
+            .play-button img {
+                width: 24px;
+                height: 24px;
+            }
         }
     </style>
 </head>
@@ -1063,6 +1200,57 @@
             </div>
             <div class="app-phones">
                 <!-- Background image will display here -->
+            </div>
+        </div>
+    </section>
+
+    <section class="stories-section">
+        <div class="stories-container">
+            <div class="stories-header">
+                <h2 class="stories-title">REAL STORIES FROM DIVERS WHO SAW THE DIFFERENCE.</h2>
+                <p class="stories-subtitle">For the first time ever, understand what you're doing in the moment using real-time metrics.</p>
+            </div>
+            <div class="stories-grid">
+                <div class="story-card">
+                    <img src="assets/image1.png" alt="Diver Story 1" class="story-image">
+                    <div class="story-overlay">
+                        <div class="play-button">
+                            <img src="assets/play-icon.png" alt="Play">
+                        </div>
+                    </div>
+                </div>
+                <div class="story-card">
+                    <img src="assets/image2.png" alt="Diver Story 2" class="story-image">
+                    <div class="story-overlay">
+                        <div class="play-button">
+                            <img src="assets/play-icon.png" alt="Play">
+                        </div>
+                    </div>
+                </div>
+                <div class="story-card">
+                    <img src="assets/image3.png" alt="Diver Story 3" class="story-image">
+                    <div class="story-overlay">
+                        <div class="play-button">
+                            <img src="assets/play-icon.png" alt="Play">
+                        </div>
+                    </div>
+                </div>
+                <div class="story-card">
+                    <img src="assets/image4.png" alt="Diver Story 4" class="story-image">
+                    <div class="story-overlay">
+                        <div class="play-button">
+                            <img src="assets/play-icon.png" alt="Play">
+                        </div>
+                    </div>
+                </div>
+                <div class="story-card">
+                    <img src="assets/image5.png" alt="Diver Story 5" class="story-image">
+                    <div class="story-overlay">
+                        <div class="play-button">
+                            <img src="assets/play-icon.png" alt="Play">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
