Add background gradient to stories section for visual consistency

--- a/index.html
+++ b/index.html
@@ -334,6 +334,11 @@
             z-index: 20;
         }
 
+        /* Ensure same background for stories section */
+        .stories-section {
+            background: linear-gradient(135deg, rgba(5, 15, 30, 0.95) 0%, rgba(10, 25, 45, 0.95) 100%) !important;
+        }
+
         .app-section #canvas3d {
             display: none !important;
             visibility: hidden !important;
